# testium

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  TODO.md  build_all.ps1  build_all.sh  release_note.txt  run.bat  run.ps1  run.sh
src/: LICENSE  pyproject.toml  requirements.txt  testium_report.py
src/lib/: api.py  jrpc.py  stdout_redirect.py  tum_except.py
src/lua_func/: tm.lua
src/py_func/: __init__.py  func_call.py  handle.py  tm.py
src/testium/: __init__.py  __main__.py
src/testium/api/: console.py  console_ssh.py  raw_tcp_console.py  runtime_plot.py  termconsole.py  testium.py
src/testium/interpreter/: batch.py  process.py  terminal.py  test_set.py
src/testium/interpreter/test_items/: dialog_env.py  test_item.py  test_item_check.py  test_item_choices_dialog.py  test_item_console.py  test_item_container.py  test_item_cycle.py  test_item_dialog_base.py  test_item_func.py  test_item_git.py  test_item_group.py  test_item_image_dialog.py  test_item_let.py  test_item_lua_func.py  test_item_msg_dialog.py  test_item_note_dialog.py  test_item_parallel.py  test_item_py_func.py  test_item_pytest.py  test_item_question_dialog.py  test_item_report.py  test_item_run.py  test_item_runtime_plot.py  test_item_sleep.py  test_item_tested_references.py  test_item_unittest.py  test_item_value_dialog.py  test_result.py
src/testium/interpreter/test_report/: report_export.py  report_export_html.py  report_export_json.py  report_export_junit.py  report_export_txt.py  report_interface.py  test_report.py
src/testium/interpreter/utils/: __init__.py  api_srv.py  bins.py  constants.py  eval.py  func_exec.py  globdict.py  icons.py  include.py  jrpc.py  lua_func_exec.py  lua_process.py  modules.py  param_decl.py  params.py  paths.py  periodic_timer.py  proc_drain.py  py_eval.py  py_func_exec.py  py_process.py  settings.py  stdout_redirect.py  step_ctrl.py  string_queue.py  template.py  termlog.py  test_ctrl.py  test_init.py  tum_except.py  version.py  yaml_load.py
src/testium/libs/: console.py  console_ssh.py  raw_tcp_console.py  runtime_plot.py  termconsole.py  testium.py
src/testium/lsp/: __init__.py  __main__.py  schema.py  server.py
src/testium/lua_func/: handle.lua  json-rpc.lua  main.lua  tm.lua  utils.lua
src/testium/main_win/: desktop_integration.py  file_dialog.py  test_controller_service.py  test_file_manager.py  test_runner.py  test_tree.py  testium_core_win.py  testium_core_win.ui  testium_win.py  text_log.py  text_log_highlighter.py
src/testium/main_win/about_win/: about_win.py  about_win.ui
src/testium/main_win/f1_win/: d_f1_win.py  f1_win_core.py  f1_win_core.ui
src/testium/main_win/preference_win/: preference_core_win.py  preference_core_win.ui  preference_win.py
src/testium/main_win/resources/: about_win.qrc  about_win_rc.py  f1_win.qrc  f1_win_rc.py  testium_core_win.qrc  testium_core_win_rc.py
src/testium/main_win/test_run/: outlog.py  test_run.py  thread_output.py
src/testium/main_win/test_tree_items/: common.py  test_tree_check.py  test_tree_choices_dialog.py  (+22 more)
src/testium/py_func/: __init__.py  __main__.py  func_call.py  handle.py  tm.py
src/testium/runtime/: api.py  export_worker.py  jrpc.py  stdout_redirect.py  string_queue.py  testium_report.py  tum_except.py
test/validation/fake_exporter/: pyproject.toml
(+220 files in other folders)
