[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="testium"
requires-python = ">=3.11"
authors = [
  {name = "François Dausseur", email = "francois@beafrancois.fr"},
]
license = "EUPL-1.2"
license-files = ["../LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]
dependencies = [
    "setuptools",
    "pyside6",
    "pyyaml",
    "pyserial",
    "colorama",
    "matplotlib",
    "telnetlib3",
    "jinja2",
    "pexpect",
    "gitpython",
    "junit-xml",
    "lxml",
]
dynamic = ["version"]

[project.scripts]
testium = "testium:main"

[tool.setuptools.packages.find]
where=["."]
exclude=["lua_func", "py_func"]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
